Update get_targets so that if there are no changes nothing is returned

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,10 +46,17 @@
       ]
     },
     {
+      "label": "action tests",
+      "type": "shell",
+      "command": "python -m unittest discover -s .github/actions -p 'test_*.py'",
+      "problemMatcher": "$python"
+    },
+    {
       "label": "test",
       "dependsOn": [
         "flake8",
-        "pydocstyle"
+        "pydocstyle",
+        "action tests"
       ]
     },
     {
