--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,5 @@
 # Recommend matching the black line length (default 88),
 # rather than using the flake8 default of 79:
 max-line-length = 88
+extend-ignore = E203,W503
+exclude = .git,__pycache__,docs/conf.py,old,build,dist,.venv
