--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,36 @@
+actions-toolkit==0.1.15
 annotated-types==0.7.0
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.0
+click==8.1.8
+cryptography==46.0.3
 flake8==7.3.0
 idna==3.11
 Jinja2==3.1.6
-markdown-it-py==4.0.0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.3
 mccabe==0.7.0
 mdurl==0.1.2
 packaging==25.0
 pycodestyle==2.14.0
-pydantic==2.12.2
+pycparser==2.23
+pydantic==2.12.3
 pydantic_core==2.41.4
 pyflakes==3.4.0
+PyGithub==2.8.1
 Pygments==2.19.2
+PyJWT==2.10.1
+PyNaCl==1.6.0
 pyparsing==3.2.5
 requests==2.32.5
 rich==14.2.0
-ruamel.yaml==0.18.15
+ruamel.yaml==0.18.16
 ruamel.yaml.clib==0.2.14
 shellingham==1.5.4
 tqdm==4.67.1
-typer==0.19.2
+typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 websocket-client==1.9.0
-actions_toolkit==0.1.15
